--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-pageflip": "^2.0.3",
+    "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "three": "^0.178.0",
     "web-vitals": "^2.1.4"
