--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-pageflip": "^2.0.3",
     "react-router-dom": "^7.11.0",
